agregado de variables en "strings.xml" sin sincronizarlo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SoaTp</string>
+    <string name="puertaDesdeRasp">SoaTp</string>
+    <string name="puertaHaciaRasp">SoaTp</string>
 </resources>
